# iroga

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
src/: compression.rs  error.rs  iro_archive.rs  iro_entry.rs  iro_header.rs  iro_parser.rs  lib.rs  main.rs
tests/: test.rs
