[package]
name = "iroga"
description = "Command line app to pack a single directory into an IRO archive (FF7 mod manager format)"
repository = "https://github.com/tangtang95/iroga"
authors = ["Tangtang Zhou <tangtang2995@gmail.com>"]
categories = ["command-line-utilities"]
keywords = ["cli", "iro", "archive"]
license = "MIT"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
thiserror = "1.0.59"
walkdir = "2.5.0"
nom = "7.1.3"

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.1.1"
predicates = "3.1.0"
hex-literal = "0.4.1"
