[package]
name = "iroga"
description = "Command line app to pack a single directory into an IRO archive (FF7 mod manager format)"
repository = "https://github.com/tangtang95/iroga"
authors = ["Tangtang Zhou <tangtang2995@gmail.com>"]
categories = ["command-line-utilities"]
keywords = ["cli", "iro", "archive"]
license = "MIT"
version = "0.3.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
thiserror = "2.0.12"
walkdir = "2.5.0"
nom = "8.0.0"
lzs = { version = "0.1.1", default-features = false, features = ["std"] }
lzma-rs = "0.3.0"
fast-glob = "0.4.5"

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
predicates = "3.1.3"
hex-literal = "1.0.0"
